--- a/app_server/views/managerBase.pug
+++ b/app_server/views/managerBase.pug
@@ -11,22 +11,31 @@ html
 						h1=pageHeader.title
 					p=pageHeader.strapline
 		div
-			.error=message
 			h2='Hello '+currentUser.firstName+' '+currentUser.lastName
 		div(style="width=100%")
 			div(style="width=50%;float:left;margin-right: 10%;display: inline-block")
+				if (error=='val')
+					p(style="color:red;background-color:pink") Form not submitted. Please try again.
+				if (created>0)
+					p(style="color:green;background-color:lime") Created #{created} mental health days
 				h4 Assign a Mental Health Day?
 				form#managerAddMHD(action="" method="post" role="form")
-					select(multiple='' name='employeeNames' style="margin-right:10%")
+					select(multiple='' name='employeeNames' style="")
 						each user in users
 							if (!user.manager)
 								option(value=user._id)=user.firstName+" "+user.lastName
+					if (error=='val')
+						p(style="color:red;display: inline-block;margin-right:10%") * 
+					else
+						p(style="display: inline-block;margin-right:10%") 
 					select(name='days')
 						option(value=1) 1 day
 						option(value=2) 2 days
 						option(value=3) 3 days
 						option(value=4) 4 days
 						option(value=5) 5 days
+					if (error=='val')
+						p(style="color:red;display: inline-block") *
 					h3 Comment:
 					input(
 						type='text'
